Some changes in documentation and routes
