# docs/swagger.json
@@ -175,6 +175,174 @@
                 }
             }
         },
+        "/go-rest-api/creditcard": {
+            "get": {
+                "description": "Search all credit cards in the DataBase",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Search all SearchCreditCards",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.CreditCardResponse"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Can not find objects",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a CreditCard",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create creditcard",
+                "parameters": [
+                    {
+                        "description": "CreditCard a subcategory",
+                        "name": "creditcard",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreditCardCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SubcategoryResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Can not find objects",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIError"
+                        }
+                    }
+                }
+            }
+        },
+        "/go-rest-api/creditcard/{id}": {
+            "get": {
+                "description": "Search CreditCard by id in the DataBase",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Search CreditCard by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "cabckbalgaLJHALncas",
+                        "description": "CreditCard ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.CreditCardResponse"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Can not find objects",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a credit card by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Delete CreditCard by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "cabckbalgaLJHALncas",
+                        "description": "CreditCard ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "404": {
+                        "description": "Can not find objects",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIError"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "description": "Update a credit card by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Update CreditCard by id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "cabckbalgaLJHALncas",
+                        "description": "CreditCard ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "$ref": "#/definitions/models.CreditCardResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Can not find objects",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIError"
+                        }
+                    }
+                }
+            }
+        },
         "/go-rest-api/customers": {
             "get": {
                 "description": "Search all customers in the DataBase",
@@ -215,7 +383,7 @@
                 "parameters": [
                     {
                         "description": "Customer type",
-                        "name": "category",
+                        "name": "customer",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -356,7 +524,7 @@
                 "parameters": [
                     {
                         "description": "Login type",
-                        "name": "category",
+                        "name": "login",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -380,7 +548,7 @@
                 }
             }
         },
-        "/go-rest-api/login/{date}": {
+        "/go-rest-api/login/date/{date}": {
             "get": {
                 "description": "Search Login by date in the DataBase",
                 "consumes": [
@@ -498,7 +666,7 @@
                 "parameters": [
                     {
                         "description": "OrderProduct type",
-                        "name": "category",
+                        "name": "orderproduct",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -601,7 +769,7 @@
                 "parameters": [
                     {
                         "description": "Order type",
-                        "name": "category",
+                        "name": "order",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -638,7 +806,7 @@
                 "parameters": [
                     {
                         "description": "Payment type",
-                        "name": "category",
+                        "name": "payment",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -662,7 +830,7 @@
                 }
             }
         },
-        "/go-rest-api/payments/{date}": {
+        "/go-rest-api/payments/date/{date}": {
             "get": {
                 "description": "Search Payments by date in the DataBase",
                 "consumes": [
@@ -940,7 +1108,7 @@
                 "parameters": [
                     {
                         "description": "Shipper type",
-                        "name": "category",
+                        "name": "shipper",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -1231,7 +1399,7 @@
                 "parameters": [
                     {
                         "description": "Supplier type",
-                        "name": "category",
+                        "name": "supplier",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -1365,6 +1533,58 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreditCardCreate": {
+            "type": "object",
+            "properties": {
+                "brand": {
+                    "type": "string"
+                },
+                "customerID": {
+                    "type": "string"
+                },
+                "cvv": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "mm": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "string"
+                },
+                "yyyy": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreditCardResponse": {
+            "type": "object",
+            "properties": {
+                "brand": {
+                    "type": "string"
+                },
+                "customerID": {
+                    "type": "string"
+                },
+                "cvv": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "mm": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "string"
+                },
+                "yyyy": {
                     "type": "string"
                 }
             }
